--- a/frontend/src/app/page.module.scss
+++ b/frontend/src/app/page.module.scss
@@ -19,6 +19,14 @@
   &__subtitle {
     @apply mb-2 text-base text-slate-700;
   }
+
+  &__buttons {
+    @apply max-w-sm flex flex-row items-center justify-between my-4;
+
+    .button {
+      @apply px-4 py-2 text-sm text-slate-200 bg-slate-700 rounded-full;
+    }
+  }
 }
 
 .card {
